--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title><To-Do-List></To-Do-List></title>
 </head>
 <body>
     <div class="header">
         <h2 style="margin:5px">My To Do List App</h2>
         <input type="text" id="myInput" placeholder="Title..."/>
-        <span class="addBtn">Add</span>
+        <span onclick="newElement()" class="addBtn">Add</span>
     </div>
     <ul id="mylist">
         <li>Hit the gym</li>
