--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <h2 style="margin:5px">My To Do List App</h2>
         <input type="text" id="myInput" placeholder="Title..."/>
-        <span onclick="newElement()" class="addBtn">Add</span>
+        <span onclick="newElement" class="addBtn">Add</span>
     </div>
     <ul id="mylist">
         <li>Hit the gym</li>
